NIJO-123: Z-Index issue fixed.

--- a/styles/header.sass
+++ b/styles/header.sass
@@ -4,7 +4,7 @@ header
     background: #ffffff
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05)
     position: relative
-    z-index: 100
+    z-index: 102
     height: 70px
     line-height: 70px
 
